# hy-mt-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
hy-mt-cli/: Cargo.toml
hy-mt-cli/src/: main.rs
hy-mt-core/: Cargo.toml
hy-mt-core/benches/: quant_linear.rs  stq_matmul.rs
hy-mt-core/src/: device.rs  error.rs  generate.rs  hub.rs  lib.rs  rope.rs  safetensors_loader.rs  sampling.rs  source.rs  tokenizer.rs  util.rs  weights.rs
hy-mt-core/src/gguf/: meta.rs  mod.rs  tensor_map.rs  vendored.rs
hy-mt-core/src/model/: attention.rs  config.rs  ffn.rs  kv_cache.rs  layer.rs  layout.rs  linear.rs  mod.rs  rms_norm.rs  transformer.rs
hy-mt-core/src/quant/: block.rs  codebook.rs  dequant.rs  matmul.rs  matmul_avx2.rs  matmul_neon.rs  mod.rs  q8.rs  quantize.rs
hy-mt-core/tests/: gguf_synthetic.rs  model_smoke.rs  regression.rs  stq_dequant_synthetic.rs  stq_matmul.rs  stq_roundtrip.rs
