[package]
name = "hy-mt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line translator built on hy-mt-core for the Hunyuan-MT 1.5 GGUF model"

[[bin]]
name = "hy-mt"
path = "src/main.rs"

[dependencies]
hy-mt-core = { path = "../hy-mt-core" }
candle-core.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
safetensors.workspace = true
serde_json.workspace = true
memmap2.workspace = true

[features]
default = []
metal = ["hy-mt-core/metal"]
cuda = ["hy-mt-core/cuda"]
mkl = ["hy-mt-core/mkl"]
accelerate = ["hy-mt-core/accelerate"]
