[package]
name = "hy-mt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust+Candle inference for Tencent Hunyuan-MT 1.5 models in STQ1_0 1.25-bit GGUF format"

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
tokenizers.workspace = true
half.workspace = true
memmap2.workspace = true
byteorder.workspace = true
bytemuck.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
hf-hub.workspace = true
safetensors.workspace = true
serde_json.workspace = true

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "stq_matmul"
harness = false

[[bench]]
name = "quant_linear"
harness = false
